fix: refactor AdminApplicationController with proper error handling, validation, and transaction management